Fix table width and alignment

--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -19,8 +19,13 @@ table td img {
 table td span.task-day-count {
   width: 22px;
   display: block;
+  margin: 0 auto;
 }
 
 table td.is-weekend {
   background-color: rgba(212, 212, 212, 0.26);
+}
+
+table tbody tr td {
+  text-align: center;
 }
